<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/twDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/DateString"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center|center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/twTemperature"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/TemperatureString"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center|center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/twFeelslike"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/FeelslikeString"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/feelslike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center|center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/twFallout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/FalloutString"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fallout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center|center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/twWindKmh"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/WindKmh"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/windspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center|center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/twWindDirection"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/WindDirectionString"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/winddirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/twPressure"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/PressureString"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center|center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/twViewCloud"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/ViewCloudString"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center|center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/twPrecip"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/PreciptionString"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/precip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center|center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:layout_weight="0"
                app:srcCompat="@android:drawable/ic_delete" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="ClickBack"
            android:text="@string/Back" />

    </LinearLayout>
</LinearLayout>